--- a/Day 4/index.html
+++ b/Day 4/index.html
@@ -32,7 +32,7 @@
             </div>
             <div class="right">
                 <div class="hero-image">
-                    <img src="./assets/images/hawana-min.jpeg" alt="Developer Image">
+                    <img src="./assets/images/hawana.jpeg" alt="Developer Image">
                 </div>
             </div>
         </section>
@@ -60,13 +60,15 @@
             </div>
         </section>
           <!-- End of top features -->
-
-        <section title="Feature Photo">
+        <section class="feature-photo-container"  title="Feature Photo">
             <div class="img-left">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
+                <img src="./assets/images/1.jpg" alt="Image I">
+                <img src="./assets/images/2.png" alt="Image II">
+                <img src="./assets/images/3.jpg" alt="Image III">
+                <img src="./assets/images/4.jpg" alt="Image IV">
+            </div>
+            <div class="img-right">
+                <img src="./assets/images/hawana.jpeg" alt="Developer Image">
             </div>
         </section>
         <!-- End of feature photo -->
